--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -26,4 +26,8 @@
   <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
   {% include custom/head.html %}
   {% include google_analytics.html %}
+
+  <!-- Chitsaou's octopress css -->
+  <link href="https://googledrive.com/host/0B3dHedG11rzWbkxBN243cll1Vlk/screen-2013-09-28-v5.css" media="screen, projection" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic%7CSource+Code+Pro:400" rel="stylesheet" type="text/css">
 </head>
